objects/APTS_Qualified_Record__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Batch_Name__c</fullName>
        <description>Field which has batch name used to update records with error</description>
        <formula>APTS_Batch_Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Batch_Number__c</fullName>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Batch_Process__c</fullName>
        <label>Batch Process</label>
        <referenceTo>APTS_DM_Batch_Job__c</referenceTo>
        <relationshipLabel>Qualified Records</relationshipLabel>
        <relationshipName>Qualified_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Batch_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32267</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Id</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Qualified Records</relationshipLabel>
        <relationshipName>Qualified_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quote__c</fullName>
        <label>Quote#</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Skip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processing Quote</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Parent CLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Child Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Parent Cart Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Qualified Record</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QR-{00000000}</displayFormat>
        <label>Qualified Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualified Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>